--- a/assets/css/sections/header.css
+++ b/assets/css/sections/header.css
@@ -9,12 +9,15 @@
   width: 100%;
   padding: 40px 15px;
   padding-inline-start: 40px;
+  border: 3px solid orange;
+  z-index: 5;
 }
 
 .header .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: rgb(170, 170, 255);
 }
 
 .logo img {
