--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 @import url(./sections/hero.css);
 @import url(./sections/service.css);
 @import url(./sections/about.css);
+@import url(./sections/work.css);
 
 /* #CUSTOM-PROPERTY */
 
@@ -269,4 +270,53 @@ body {
   text-transform: uppercase;
   color: var(--international-orange-engineering);
   font-weight: var(--fw-700);
+}
+
+.w-100 {
+  width: 100%;
+}
+
+.img-holder {
+  aspect-ratio: var(--width) / var(--height);
+  background-color: var(--light-gray);
+  overflow: hidden;
+}
+
+.img-cover {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.has-scrollbar {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  overflow-x: auto;
+  scroll-snap-type: inline mandatory;
+  padding-block-end: 20px;
+}
+
+.scrollbar-item {
+  min-width: 100%;
+  scroll-snap-align: start;
+}
+
+.has-scrollbar::-webkit-scrollbar {
+  height: 16px;
+}
+
+.has-scrollbar::-webkit-scrollbar-track {
+  background-color: var(--pastel-pink);
+  border-radius: 20px;
+}
+
+.has-scrollbar::-webkit-scrollbar-thumb {
+  background-color: var(--international-orange-engineering);
+  border-radius: 20px;
+  border: 3px solid var(--pastel-pink);
+}
+
+.has-scrollbar::-webkit-scrollbar-button {
+  width: 15%;
 }
