--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
 @import url(./sections/service.css);
 @import url(./sections/about.css);
 @import url(./sections/work.css);
+@import url(./sections/footer.css);
 
 /* #CUSTOM-PROPERTY */
 
