responsiveness for min-width of 575px added

--- a/assets/css/sections/about.css
+++ b/assets/css/sections/about.css
@@ -38,3 +38,18 @@
   display: block;
   line-height: 1.1;
 }
+
+/* #MEDIA QUERIES  */
+
+/* responsive for large than 575px screen  */
+
+@media (min-width: 575px) {
+  .about-list {
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+  }
+
+  .about-item {
+    padding-block: 20px;
+  }
+}
