--- a/assets/css/sections/footer.css
+++ b/assets/css/sections/footer.css
@@ -76,3 +76,25 @@
   text-align: center;
   font-size: var(--fs-6);
 }
+
+/* #MEDIA QUERIES  */
+
+/* responsive for large than 575px screen  */
+
+@media (min-width: 575px) {
+  .footer-top {
+    position: relative;
+    overflow: hidden;
+  }
+
+  .footer-top .container {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .footer .shape-3 {
+    display: block;
+    position: absolute;
+    bottom: -30px;
+    right: 0;
+  }
+}
