--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,3 +321,33 @@ body {
 .has-scrollbar::-webkit-scrollbar-button {
   width: 15%;
 }
+
+/* #MEDIA QUERIES  */
+
+/* responsive for large than 575px screen  */
+
+@media (min-width: 575px) {
+  :root {
+    --fs-2: 4rem;
+    --fs-3: 2.8rem;
+    --fs-4: 2rem;
+  }
+
+  .container {
+    max-width: 540px;
+    width: 100%;
+    margin-inline: auto;
+  }
+
+  .section-subtitle {
+    --fs-5: 1.6rem;
+  }
+
+  .h2 {
+    font-weight: var(--fw-700);
+  }
+
+  .scrollbar-item {
+    min-width: calc(50% - 15px);
+  }
+}
