--- a/assets/css/sections/footer.css
+++ b/assets/css/sections/footer.css
@@ -98,3 +98,58 @@
     right: 0;
   }
 }
+
+/* responsive for large than 768px screen  */
+
+@media (min-width: 768px) {
+  .footer-top .container {
+    grid-template-columns: 1fr 0.9fr 0.9fr;
+  }
+
+  .copyright {
+    --fs-6: 1.4rem;
+  }
+}
+
+/* responsive for large than 1200px screen  */
+
+@media (min-width: 1200px) {
+  .footer-top {
+    padding-block: 150px;
+  }
+
+  .footer-top .container {
+    padding-inline-start: 25%;
+  }
+
+  .footer-bottom {
+    position: relative;
+    padding-block: 30px;
+    z-index: 1;
+  }
+
+  .footer :is(.shape-1, .shape-2) {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    width: 50%;
+    pointer-events: none;
+    z-index: -1;
+  }
+
+  .footer .shape-1 {
+    left: -100px;
+  }
+
+  .footer .shape-2 {
+    left: -50px;
+  }
+}
+
+/* responsive for large than 1400px screen  */
+
+@media (min-width: 1400px) {
+  .footer-top .container {
+    padding-inline-start: 20%;
+  }
+}
