--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,18 +122,32 @@ body {
   color: var(--sonic-silver);
   font-size: 1.6rem;
   line-height: 1.5;
-  border: 5px solid rebeccapurple;
 }
 
 :focus-visible {
   outline-offset: 4px;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: hsl(0, 0%, 98%);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: hsl(0, 0%, 80%);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: hsl(0, 0%, 70%);
+}
+
 /* ....... #RESUED-STYLE  */
 
 .container {
   padding-inline: 16px;
-  border: 3px solid yellowgreen;
 }
 
 .material-symbols-rounded {
@@ -349,5 +363,103 @@ body {
 
   .scrollbar-item {
     min-width: calc(50% - 15px);
+  }
+}
+
+/* responsive for large than 768px screen  */
+
+@media (min-width: 768px) {
+  :root {
+    --fs-1: 4rem;
+    --fs-2: 5rem;
+    --fs-3: 3.4rem;
+  }
+
+  .container,
+  .hero-content {
+    max-width: 720px;
+  }
+
+  .btn {
+    padding: 16px 32px;
+  }
+
+  .section-subtitle {
+    --fs-5: 1.8rem;
+  }
+
+  .section-title:not(.h1) {
+    max-width: 500px;
+    margin-inline: auto;
+  }
+}
+
+/* responsive for large than 992px screen  */
+
+@media (min-width: 992px) {
+  :root {
+    --fs-2: 4.4rem;
+    --fs-3: 3.8rem;
+    --fs-4: 2.2rem;
+
+    --section-padding: 100px;
+  }
+
+  .container {
+    max-width: 960px;
+  }
+
+  .section-text,
+  .card-text {
+    font-size: 1.8rem;
+  }
+
+  .has-scrollbar {
+    overflow-x: visible;
+  }
+
+  .scrollbar-item {
+    min-width: calc(33.33% - 20px);
+  }
+}
+
+/* responsive for large than 1200px screen  */
+
+@media (min-width: 1200px) {
+  :root {
+    --fs-2: 5rem;
+    --fs-3: 4.6rem;
+  }
+
+  .container,
+  .hero .container {
+    max-width: 1140px;
+  }
+
+  .btn {
+    padding: 18px 36px;
+  }
+
+  .btn .material-symbols-rounded {
+    --fs: 1.3em;
+  }
+}
+
+/* responsive for large than 1400px screen  */
+
+@media (min-width: 1400px) {
+  :root {
+    --fs-2: 6rem;
+
+    --section-padding: 140px;
+  }
+
+  :is(.header, .hero) .container {
+    max-width: 1280px;
+  }
+
+  .section-subtitle::before {
+    height: 20px;
+    margin-inline-end: 5px;
   }
 }
